# GW2_farming_tracker

./: .gitignore  APIKey.py  App.py  Controller.py  GW2_API_handler.py  Inventory.py  Makefile  Model.py  README.md  Report.py  View.py  build_script.py  gw2_tracker_launcher.py  mwe.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml  main.yml  release.yml
gw2_tracker/: __init__.py  __main__.py  app.py  controller.py  controllers.py  gw2_api.py  inventory.py  model.py  models.py  protocols.py  report.py  reports.py  utils.py  view.py
gw2_tracker/views/: __init__.py  tkview.py
tests/: _test_model.py  _test_view.py  strategies.py  test_gw2_tracker.py  test_inventory.py  test_models.py
