[tool.poetry]
name = "gw2_tracker"
version = "0.1.0"
description = ""
authors = ["Krashnark"]
include = ["assets/"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^8.4.0"
pendulum = "^2.1.2"
attrs = "^21.2.0"
trio = "^0.19.0"
asks = "^2.4.12"
outcome = "^1.1.0"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
isort = "^5.10.1"
pylint = "^2.11.1"
hypothesis = "^6.24.3"

[tool.poetry.scripts]
gw2_tracker = 'gw2_tracker.__main__:main'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

